#40 fix title on mobile add configs to compile in android

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -73,7 +73,7 @@
     }
 
     &:before {
-      content:"Wacamorning Weather:";
+      content:"Wacamorning Clima:";
       font-family: "BodoAmat";
       font-size: 2rem;
       text-align: center;
